API_Reference/pymilvus/v2.3.x/MilvusClient/Collections/DataType.md

# DataType

This is an enumeration that provides the following constants.

## Constants

- NONE = 0
Sets the data type to __NoneType__.

- BOOL = 1
Sets the data type to __Boolean__.

- INT8 = 2
Sets the data type to __Int8__.

- INT16 = 3
Sets the data type to __Int16__.

- INT32 = 4
Sets the data type to __Int32__.

- INT64 = 5
Sets the data type to __Int64__.

- FLOAT = 10
Sets the data type to __Float__.

- DOUBLE = 11
Sets the data type to __Double__.

- STRING = 20
Sets the data type to __String__.

- VARCHAR = 21
Sets the data type to __Varchar__.

- ARRAY = 22
Sets the data type to __Array__.

- JSON = 23
Sets the data type to __JSON__.

- BINARY_VECTOR = 100
Sets the data type to __Binary Vector__.

- FLOAT_VECTOR = 101
Sets the data type to __Float Vector__.

- UNKNOWN = 999
Sets the data type to __Unknown__.

