API_Reference/pymilvus/v2.4.x/MilvusClient/Collections/DataType.md
# DataType

This is an enumeration that provides the following constants.

## Constants

- NONE = 0
  
  Sets the data type to **NoneType**.

- BOOL = 1

  Sets the data type to **Boolean**.

- INT8 = 2

  Sets the data type to **Int8**.

- INT16 = 3

  Sets the data type to **Int16**.

- INT32 = 4

  Sets the data type to **Int32**.

- INT64 = 5

  Sets the data type to **Int64**.

- FLOAT = 10

  Sets the data type to **Float**.

- DOUBLE = 11

  Sets the data type to **Double**.

- STRING = 20

  Sets the data type to **String**.

- VARCHAR = 21

  Sets the data type to **Varchar**.

- ARRAY = 22

  Sets the data type to **Array**.

- JSON = 23

  Sets the data type to **JSON**.

- BINARY_VECTOR = 100

  Sets the data type to **Binary Vector**.

- FLOAT_VECTOR = 101

  Sets the data type to **Float Vector**.

- FLOAT16_VECTOR = 102

  Sets the data type to **Float16**.

- BFLOAT16_VECTOR = 103

  Sets the data type to **BFloat16**.

- SPARSE_FLOAT_VECTOR = 104

  Sets the data type to **Sparse Vector**.

- UNKNOWN = 999

  Sets the data type to **Unknown**.
  